<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackLogin"
    android:id="@+id/login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:textStyle="bold"
        android:textSize="14dip"
        android:text="@string/titulo_1_audit_p2"
        android:id="@+id/textView1"
        android:textColor="@color/colorTextBlack"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/colorTextBlack"
        android:textStyle="bold"
        android:textSize="17dip"
        android:text="@string/titulo_2_audit_p2"
        android:id="@+id/textView2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/colorTextBlack"
        android:textStyle="bold"
        android:textSize="17dip"
        android:text="@string/nobre_audit_p2"
        android:id="@+id/textView3"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >
        <TextView
            android:layout_width="40dp"
            android:layout_height="7dp"
            android:id="@+id/textView4"
            android:background="@color/colorFondoWc"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="7dp"
            android:id="@+id/textView5"
            android:background="@color/colorButtonLogin"
            android:layout_marginTop="25dp"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="7dp"
            android:id="@+id/textView6"
            android:background="@color/colorFondoWc"
            android:layout_marginTop="25dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_instal"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:drawablePadding="20dip"
        android:paddingStart="25dp"
        android:paddingTop="0dp"
        android:background="@color/colorInputLogin"
        android:drawableRight="@drawable/icono_row_wc"
        android:text="@string/txt1_audit_p2"
        android:textColor="@color/colorTextBlDegra"
        android:textSize="16dip"
        android:textAllCaps="false"
        android:gravity="left|center"
        />
    <EditText android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorInputLogin"
        android:inputType="text"
        android:hint="@string/txt2_audit_p2"
        android:paddingLeft="10dp"
        android:textSize="17dip"
        android:singleLine="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorTextBlack"
        android:textStyle="bold"
        android:textSize="17dip"
        android:text="@string/subtitulo_audit_p2"
        android:id="@+id/textViewSub"/>

    <Button
        android:id="@+id/btn_workers"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:drawablePadding="20dip"
        android:paddingStart="25dp"
        android:paddingTop="0dp"
        android:background="@color/colorInputLogin"
        android:drawableRight="@drawable/icono_row_wc"
        android:text="@string/btn_audit_p2_trab"
        android:textColor="@color/colorTextBlDegra"
        android:textSize="16dip"
        android:textAllCaps="false"
        android:gravity="left|center"
        />
    <Button
        android:id="@+id/btn_contractor"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:drawablePadding="20dip"
        android:paddingStart="25dp"
        android:paddingTop="0dp"
        android:background="@color/colorInputLogin"
        android:drawableRight="@drawable/icono_row_wc"
        android:text="@string/btn_audit_p2_contra"
        android:textColor="@color/colorTextBlDegra"
        android:textSize="16dip"
        android:textAllCaps="false"
        android:gravity="left|center"
        />
    <Button
        android:id="@+id/btn_boss"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:drawablePadding="20dip"
        android:paddingStart="25dp"
        android:paddingTop="0dp"
        android:background="@color/colorInputLogin"
        android:drawableRight="@drawable/icono_row_wc"
        android:text="@string/btn_audit_p2_area"
        android:textColor="@color/colorTextBlDegra"
        android:textSize="16dip"
        android:textAllCaps="false"
        android:gravity="left|center"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="0dp"
        android:text="@string/button_audit_p2_cont"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="20dip"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_rec_psw"
        android:textAllCaps="false"
        android:id="@+id/btn_audit_p2_continue"/>
</LinearLayout>
    </ScrollView>