<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/colorBackLogin"
    android:id="@+id/login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            
            android:textSize="14dip"
            android:text="@string/titulo_1_wc"
            android:id="@+id/textView1"
            android:textColor="@color/colorTextBlack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/colorTextBlack"
            
            android:textSize="17dip"
            android:text="@string/titulo_2_wc"
            android:id="@+id/textView2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/colorTextBlack"
            
            android:textSize="17dip"
            android:text="@string/titulo_3_wc"
            android:id="@+id/textView3"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >
        <TextView
            android:layout_width="40dp"
            android:layout_height="7dp"
            android:id="@+id/textView4"
            android:background="@color/colorButtonLogin"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="7dp"
            android:id="@+id/textView5"
            android:background="@color/colorFondoWc"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="7dp"
            android:id="@+id/textView6"
            android:background="@color/colorFondoWc"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="vertical">
    <Button
        android:id="@+id/boton_ta"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:drawablePadding="20dip"
        android:paddingStart="25dp"
        android:paddingTop="0dp"
        android:background="@color/colorInputLogin"
        android:drawableRight="@drawable/icono_row_wc"
        android:text="@string/button_menu_wc_ta"
        android:textColor="@color/colorTextBlDegra"
        
        android:textSize="16dip"
        android:textAllCaps="false"
        android:gravity="left|center"
        />
    <Button
        android:id="@+id/boton_region"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:drawablePadding="20dip"
        android:paddingStart="25dp"
        android:paddingTop="0dp"
        android:background="@color/colorInputLogin"
        android:drawableRight="@drawable/icono_row_wc"
        android:text="@string/button_menu_wc_reg"
        android:textColor="@color/colorTextBlDegra"
        
        android:textSize="16dip"
        android:textAllCaps="false"
        android:gravity="left|center"
        />
    <Button
                android:id="@+id/boton_wc"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:drawablePadding="20dip"
                android:paddingStart="25dp"
                android:paddingTop="0dp"
                android:background="@color/colorInputLogin"
                android:drawableRight="@drawable/icono_row_wc"
                android:text="@string/button_menu_wc_wc"
                android:textColor="@color/colorTextBlDegra"
                
                android:textSize="16dip"
                android:textAllCaps="false"
                android:gravity="left|center"
                />
    <Button
        android:id="@+id/boton_depto"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:drawablePadding="20dip"
        android:paddingStart="25dp"
        android:paddingTop="0dp"
        android:background="@color/colorInputLogin"
        android:drawableRight="@drawable/icono_row_wc"
        android:text="@string/button_menu_wc_dep"
        android:textColor="@color/colorTextBlDegra"
        
        android:textSize="16dip"
        android:textAllCaps="false"
        android:gravity="left|center"
        />
    <Button
        android:id="@+id/boton_area_p1"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:drawablePadding="20dip"
        android:paddingStart="25dp"
        android:paddingTop="0dp"
        android:background="@color/colorInputLogin"
        android:drawableRight="@drawable/icono_row_wc"
        android:text="@string/button_menu_wc_area"
        android:textColor="@color/colorTextBlDegra"
        
        android:textSize="16dip"
        android:textAllCaps="false"
        android:gravity="left|center"
        />

    <Button
        android:id="@+id/fecha_wc"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:drawablePadding="20dip"
        android:paddingStart="25dp"
        android:paddingTop="0dp"
        android:background="@color/colorFondoWc"
        android:drawableRight="@drawable/calendar_fill"
        android:textColor="@color/colorTextBlDegra"
        android:text="@string/button_menu_wc_fecha"
        
        android:textSize="16dip"
        android:textAllCaps="false"
        android:gravity="left|center"
        />

        <EditText android:id="@+id/semana_wc"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/colorFondoWc"
            android:inputType="textEmailAddress"
            android:hint="@string/button_menu_wc_sem"
            android:paddingLeft="10dp"
            android:textSize="17dip"
            android:singleLine="true"
            android:enabled="false" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="0dp"
        android:text="@string/button_wc_cont"
        android:textColor="#FFF"
        android:paddingBottom="10dp"
        android:textSize="20dip"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_rec_psw"
        android:textAllCaps="false"
        android:id="@+id/button_wc_continue"/>
</LinearLayout>