<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/colorBackLogin"
    android:id="@+id/login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:dividerPadding="15dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/imageView"
            android:src="@drawable/menu" />


        <Button
            android:id="@+id/boton_audit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:drawablePadding="20dip"
            android:paddingStart="25dp"
            android:background="@drawable/button_menu"
            android:drawableLeft="@drawable/worker"
            android:text="@string/button_menu_ini_aud"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16dip"
            android:textAllCaps="false"
            android:gravity="left|center"
            />

        <Button
            android:id="@+id/boton_permisos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:drawablePadding="20dip"
            android:paddingStart="25dp"
            android:background="@drawable/button_menu"
            android:drawableLeft="@drawable/worker"
            android:text="@string/button_menu_per"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16dip"
            android:textAllCaps="false"
            android:gravity="left|center"
            />

        <Button
            android:id="@+id/boton_auditorias_realiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:drawablePadding="20dip"
            android:paddingStart="25dp"
            android:background="@drawable/button_menu"
            android:drawableLeft="@drawable/worker"
            android:text="@string/button_menu_audi"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16dip"
            android:textAllCaps="false"
            android:gravity="left|center"
            />

        <Button
            android:id="@+id/boton_comunicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:drawablePadding="20dip"
            android:paddingStart="25dp"
            android:background="@drawable/button_menu"
            android:drawableLeft="@drawable/worker"
            android:text="@string/button_menu_com"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16dip"
            android:textAllCaps="false"
            android:gravity="left|center"
            />

        <Button
            android:id="@+id/boton_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:drawablePadding="20dip"
            android:paddingStart="25dp"
            android:background="@drawable/button_menu"
            android:drawableLeft="@drawable/worker"
            android:text="@string/button_menu_perfil"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16dip"
            android:textAllCaps="false"
            android:gravity="left|center"
            />

        <Button
            android:id="@+id/boton_alertas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:drawablePadding="20dip"
            android:paddingStart="25dp"
            android:background="@drawable/button_menu"
            android:drawableLeft="@drawable/worker"
            android:text="@string/button_menu_aler"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16dip"
            android:textAllCaps="false"
            android:gravity="left|center"
            />
    </LinearLayout>
</LinearLayout>